# Hello_Big_Data_Infrastructure

./: .gitignore  .pre-commit-config.yaml  .pytest.json  Makefile  README.adoc  poetry.lock.backup  pyproject.toml
.mypy/: index.txt
bdi_api/: __init__.py  app.py  models.py  settigns.py  settings.py
bdi_api/s1/: README.adoc  __init__.py  exercise.py  solution.py  test.py  test2.py  test3.py  testing.py
bdi_api/s3/: README.adoc  __init__.py
bdi_api/s4/: README.adoc  exercise.py
bdi_api/s7/: README.adoc  exercise.py
bdi_api/s8/: README.adoc  exercise.py
bdi_api/s8/dags/: aircraft_database_dag.py  download_fuel_consumption_rates_dag.py  readsb-hist_dag.py
docs/: env_variables.adoc
tests/: test_api_schema.py
tests/examples/: test_examples.py
tests/s4/: test_download.py  test_prepare.py
tests/s7/: test_db_connection.py
tests/s8/: test_s8_endpoints.py  tests_dags.py
